[workspace]
members = ["rcgen", "rustls-cert-gen"]
resolver = "2"

[workspace.dependencies]
aws-lc-rs = { version = "1.6.0", default-features = false }
pem = "3.0.2"
pki-types = { package = "rustls-pki-types", version = "1.4.1" }
ring = "0.17"
x509-parser = "0.18.0-beta.1"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
description = "Rust X.509 certificate generator"
repository = "https://github.com/rustls/rcgen"
keywords = ["mkcert", "ca", "certificate"]

[patch.crates-io]
x509-parser = { git = 'https://github.com/rusticata/x509-parser' }
